
* FileUtils

  * New method:

    * FileUtils#cp_lr [Feature #4189]

* Matrix

  * New method:

    * Matrix#antisymmetric?

* Net

  * New method:

    * Add write_timeout keyword argument to Net::BufferedIO.new. [Feature #13396]

    * Add Net::BufferedIO#write_timeout, Net::BufferedIO#write_timeout=,
      Net::HTTP#write_timeout, and Net::HTTP#write_timeout=. [Feature #13396]

* REXML

  * Improved some XPath implementations:

    * concat() function: Stringify all arguments before concatenating

    * string() function: Support context node

    * string() function: Support processing instruction node

    * Support "*:#{ELEMENT_NAME}" syntax in XPath 2.0

  * Fixed some XPath implementations:

    * "//#{ELEMENT_NAME}[#{POSITION}]" case

    * string() function: Fix function(document) returns nodes that are
      out of root elements.

    * "/ #{ELEMENT_NAME} " case

    * "/ #{ELEMENT_NAME} [ #{PREDICATE} ]" case

    * "/ #{AXIS}:: #{ELEMENT_NAME} " case

    * "#{N}-#{M}" case: One ore more white spaces were required before "-"

    * "/child::node()" case

    * "#{FUNCTION}()/#{PATH}" case

    * "@#{ATTRIBUTE}/parent::" case

    * "name(#{NODE_SET})" case

* RSS

  * RSS::Parser.parse: Accept options as Hash. :validate,
    :ignore_unknown_element, :parser_class options are available.

* Set

  * Aliased methods:

    * Set#filter! is a new alias for Set#select! [Feature #13784]

* URI

  * Add URI::File to handle file URI scheme [Feature #14035]

=== Compatibility issues (excluding feature bug fixes)

* File

  * File.read, File.binread, File.write, File.binwrite, File.foreach,
    and File.readlines do not invoke external commands even if the path
    starts with the pipe character |.  [Feature #14245]

* Dir

  * Dir.glob with '\0'-separated pattern list will be deprecated, and
    is now warned.  [Feature #14643]

=== Stdlib compatibility issues (excluding feature bug fixes)

=== C API updates

=== Supported platform changes
