@@ -159,6 +159,11 @@ with all sufficient information, see the ChangeLog file or Redmine
     * Add Net::BufferedIO#write_timeout, Net::BufferedIO#write_timeout=,
       Net::HTTP#write_timeout, and Net::HTTP#write_timeout=. [Feature #13396]
 
+  * New constant:
+
+    * Add Net::HTTPClientException to deprecate Net::HTTPServerException,
+      whose name is misleading. [Bug #14688]
+
 * REXML
 
   * Improved some XPath implementations:
